<?xml version="1.0" encoding="utf-8"?>
<menu
    android:id="@+id/navigation"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_routes"
        android:icon="@drawable/ic_demoicon"
        android:title="@string/title_routes"/>
<!--    <item-->
<!--        android:id="@+id/navigation_demo"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/demo"/>-->
    <item
        android:id="@+id/navigation_team"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="Team"/>
</menu>
